--- a/lib/dumb_receipt/views/layout.slim
+++ b/lib/dumb_receipt/views/layout.slim
@@ -2,11 +2,14 @@ doctype html
 html
   head
     title DumbReceipt - README
+    meta name='viewport' content='width=device-width, initial-scale=1.0'
     script type='text/javascript' src==uri('application.js')
-    link rel='stylesheet' type='text/css' href==uri('bootstrap/css/bootstrap.css')
+    link rel='stylesheet' type='text/css' href==uri('bootstrap/css/bootstrap.min.css')
+    link rel='stylesheet' type='text/css' href==uri('bootstrap/css/bootstrap-responsive.min.css')
     link rel='stylesheet' type='text/css' href==uri('application.css')
   body
     #page.container-fluid
       .row-fluid
         .span12
           == yield
+    #shadow
