--- a/lib/dumb_receipt/views/application.sass
+++ b/lib/dumb_receipt/views/application.sass
@@ -9,6 +9,10 @@ body
 h2
   border-bottom: 1px solid #ccc
 
+code
+  padding: 0 2px
+  color: black
+
 #page
   max-width: 640px
   margin: 2em auto
