Update README/LICENSE and their display

--- a/lib/dumb_receipt/views/application.sass
+++ b/lib/dumb_receipt/views/application.sass
@@ -13,6 +13,14 @@ code
   padding: 0 2px
   color: black
 
+.sr_red
+  color: $sr_red
+
+.copyright
+  color: #666
+  font-size: 0.9em
+  text-align: center
+
 #page
   max-width: 640px
   margin: 2em auto
@@ -20,9 +28,6 @@ code
   border-radius: 7px
   background: white
   box-shadow: 0 0 20px black
-
-.sr_red
-  color: $sr_red
 
 #shadow
   position: fixed
