Make names unique

--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -127,7 +127,7 @@ receipts:
 
 offers:
 - uuid: "439c5d30-2eb7-11e2-81c1-0800200c9a66"
-  name: "Offer 1"
+  name: "Free Salmon!"
   contents: "Lorem ipsum dolor set amit"
   image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFNYTNb49Diklfmn3HKvOx.png"
   thumbnail_image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFN.png"
@@ -140,7 +140,7 @@ offers:
   created_at: 2012-07-19T09:39:52Z
   updated_at: 2012-07-19T09:39:47Z
 - uuid: "439c5d31-2eb7-11e2-81c1-0800200c9a66"
-  name: "Offer 2"
+  name: "Buy 1 get 1!"
   contents: "Second Offer!"
   image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFNYTNb50Diklfmn3HKvOx.png"
   thumbnail_image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFM.png"
@@ -153,7 +153,7 @@ offers:
   created_at: 2012-07-19T09:39:23Z
   updated_at: 2012-07-19T09:39:34Z
 - uuid: "439c5d32-2eb7-11e2-81c1-0800200c9a66"
-  name: "Offer 1"
+  name: "Pet Goggles, half price!"
   contents: "Lorem ipsum dolor set amit"
   image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFNYTNb49Diklfmn3HKvOx.png"
   thumbnail_image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFN.png"
@@ -166,7 +166,7 @@ offers:
   created_at: 2012-07-19T09:39:23Z
   updated_at: 2012-07-19T09:39:34Z
 - uuid: "452c5d30-2eb7-11e2-81c1-0800200c9a66"
-  name: "Offer 1"
+  name: "Free Large Soda!"
   contents: "Lorem ipsum dolor set amit"
   image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFNYTNb49Diklfmn3HKvOx.png"
   thumbnail_image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFN.png"
@@ -179,7 +179,7 @@ offers:
   created_at: 2012-07-19T09:39:23Z
   updated_at: 2012-07-19T09:39:34Z
 - uuid: "466c5d30-2eb7-11e2-81c1-0800200c9a66"
-  name: "Offer 1"
+  name: "Half-priced Pie!"
   contents: "Lorem ipsum dolor set amit"
   image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFNYTNb49Diklfmn3HKvOx.png"
   thumbnail_image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFN.png"
