--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -1,6 +1,7 @@
 ---
 
 <% require 'active_support/core_ext/numeric/time' %>
+<% now, never = Time.now, Time.at(0) %>
 
 #
 # In all cases, the first example should be the most complete. We'll write our
@@ -13,23 +14,23 @@ receipts:
   check: "9823"
   order: "92"
   currency: "USD"
-  claimed_at: 2013-10-19T09:39:00Z
-  completed_at: 2013-11-19T09:39:00Z
-  item_count: 4
+  claimed_at: <%= now - 2.weeks %>
+  completed_at: <%= now - 2.weeks %>
+  item_count: 2
   totals:
-  - subtotal: 11.28
-  - tax: 0.78
-  - total: 10.50
+  - subtotal: 10.50
+  - tax: 0.81
+  - total: 11.31
   items:
-  - name: "Candy"
-    price: 0.50
+  - name: "MD Coffee"
+    price: 0.99
     quantity: 1
-  - name: "Pizza"
-    price: 5.00
-    quantity: 2
+  - name: "Doughnut"
+    price: 1.39
+    quantity: 1
   zones:
   - type: "header"
-    image_url: "https://dumb-receipt.herokuapp.com/images/header.png"
+    image_url: "https://dumb-receipt.herokuapp.com/images/joes_coffee.png"
   offers:
   - "439c5d30-2eb7-11e2-81c1-0800200c9a66"
   - "466c5d30-2eb7-11e2-81c1-0800200c9a66"
@@ -38,20 +39,20 @@ receipts:
   check: "9826"
   order: "96"
   currency: "USD"
-  claimed_at: 2013-07-19T09:39:00Z
-  completed_at: 2013-07-19T09:39:23Z
+  claimed_at: <%= now - 1.week %>
+  completed_at: <%= now - 1.week %>
   item_count: 3
   totals:
-  - subtotal: 11.28
-  - tax: 0.78
-  - total: 10.50
+  - subtotal: 5.01
+  - tax: 0.39
+  - total: 5.40
   items:
-  - name: "Candy"
-    price: 0.50
-    quantity: 1
-  - name: "Pizza"
-    price: 5.00
+  - name: "SM coffee"
+    price: 0.79
     quantity: 2
+  - name: "Ham & Cheese Croissant"
+    price: 3.43
+    quantity: 1
   zones:
   - type: "items"
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a66"
@@ -59,16 +60,19 @@ receipts:
   cashier: "Joe"
   transaction: "98730"
   currency: "USD"
-  claimed_at: 2012-12-19T09:39:23Z
-  completed_at: 2012-12-29T09:39:32Z
-  item_count: 4
+  claimed_at: <%= now - 6.hours %>
+  completed_at: <%= now - 6.hours %>
+  item_count: 2
   totals:
-  - subtotal: 0.85
-  - tax: 0.61
-  - total: 0.79
+  - subtotal: 9.08
+  - tax: 0.70
+  - total: 9.78
   items:
-  - name: Taco
-    price: 0.79
+  - name: "Breakfast Special"
+    price: 7.99
+    quantity: 1
+  - name: "Coffee"
+    price: 1.09
     quantity: 1
   zones:
   - type: "totals"
@@ -79,19 +83,19 @@ receipts:
   cashier: "Mary"
   order: "92"
   currency: "USD"
-  claimed_at: 2012-07-19T09:39:42Z
-  completed_at: 2012-07-19T09:39:17Z
+  claimed_at: <%= now - 2.days %>
+  completed_at: <%= now - 2.days %>
   item_count: 2
   totals:
-  - subtotal: 2.67
-  - tax: 0.19
-  - total: 2.48
+  - subtotal: 4.38
+  - tax: 0.34
+  - total: 4.72
   items:
-  - name: "Burrito"
-    price: 1.49
+  - name: "6\" Turkey w/ Avocado"
+    price: 3.49
     quantity: 1
-  - name: "Soda"
-    price: 0.99
+  - name: "Fountain Drink"
+    price: 0.89
     quantity: 1
   zones:
   - type: "items"
@@ -102,23 +106,23 @@ receipts:
   check: "9832"
   order: "99"
   currency: "USD"
-  claimed_at: 2012-07-19T09:39:23Z
-  completed_at: 2012-07-19T09:39:38Z
+  claimed_at: <%= now - 5.days %>
+  completed_at: <%= now - 5.days %>
   item_count: 4
   totals:
-  - subtotal: 10.09
-  - tax: 1.09
-  - total: 9.00
+  - subtotal: 10.06
+  - tax: 0.78
+  - total: 10.84
   items:
-  - name: "Bagel"
-    price: 3.00
+  - name: "6\" Turkey w/ Avocado"
+    price: 3.49
     quantity: 1
-  - name: "Sandwich"
-    price: 5.00
+  - name: "Footlong BMT"
+    price: 4.59
+    quantity: 1
+  - name: "Choc Chip Cookie"
+    price: 0.99
     quantity: 2
-  - name: "Cookie"
-    price: 1.00
-    quantity: 1
   zones:
   - type: "totals"
   offers:
@@ -127,8 +131,8 @@ receipts:
 - uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a67"
   order: "32"
   currency: "USD"
-  claimed_at: 2012-07-19T09:39:23Z
-  completed_at: 2012-07-19T09:39:38Z
+  claimed_at: <%= now - 8.days %>
+  completed_at: <%= now - 8.days %>
   item_count: 1
   totals:
   - subtotal: 2.89
@@ -147,8 +151,8 @@ receipts:
 - uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a68"
   order: "42"
   currency: "USD"
-  claimed_at: <%= Time.now - 3.5.days %>
-  completed_at: <%= Time.now - 3.5.days %>
+  claimed_at: <%= now - 3.5.days %>
+  completed_at: <%= now - 3.5.days %>
   item_count: 6
   totals:
   - subtotal: 12.54
@@ -166,75 +170,74 @@ receipts:
     quantity: 2
   zones:
   - type: "totals"
-  offers:
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a61"
 
 offers:
 - uuid: "439c5d30-2eb7-11e2-81c1-0800200c9a66"
-  name: "Free Salmon!"
-  contents: "Lorem ipsum dolor set amit"
+  name: "Free Small Coffee!"
+  contents: "Redeem this coupon any time for a free small coffee!"
   image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFNYTNb49Diklfmn3HKvOx.png"
   thumbnail_image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFN.png"
   is_read: true
   is_redeemed: false
   barcode_image_url: "https://dumb-receipt.herokuapp.com/images/49Diklfmn3HKvOx.png"
   coupon_code: "ABC12345"
-  expires: <%= Time.now - 1.day %>
-  redeemed_at: <%= Time.at 0 %>
-  created_at: 2012-07-19T09:39:52Z
-  updated_at: 2012-07-19T09:39:47Z
+  expires: <%= now - 1.day %>
+  redeemed_at: <%= now - 2.5.days %>
+  created_at: <%= now - 2.weeks %>
+  updated_at: <%= now - 2.5.days %>
 - uuid: "439c5d31-2eb7-11e2-81c1-0800200c9a66"
-  name: "Buy 1 get 1!"
-  contents: "Second Offer!"
+  name: "25% Off Any Lunch Order!"
+  contents: "Come in for lunch and redeem this coupon for 25% off any lunch order!"
   image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFNYTNb50Diklfmn3HKvOx.png"
   thumbnail_image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFM.png"
   is_read: true
   is_redeemed: false
   barcode_image_url: "https://dumb-receipt.herokuapp.com/images/50Diklfmn3HKvOx.png"
   coupon_code: "ABC12346"
-  expires: <%= Time.now + 1.day %>
-  redeemed_at: <%= Time.at 0 %>
-  created_at: 2012-07-19T09:39:23Z
-  updated_at: 2012-07-19T09:39:34Z
+  expires: <%= now + 7.days %>
+  redeemed_at: <%= never %>
+  created_at: <%= now - 6.hours %>
+  updated_at: <%= now - 6.hours %>
 - uuid: "439c5d32-2eb7-11e2-81c1-0800200c9a66"
-  name: "Pet Goggles, half price!"
-  contents: "Lorem ipsum dolor set amit"
+  name: "2 Free Cookies!"
+  contents: "Redeem this coupon for a free cookie!"
   image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFNYTNb49Diklfmn3HKvOx.png"
   thumbnail_image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFN.png"
   is_read: true
   is_redeemed: true
   barcode_image_url: "https://dumb-receipt.herokuapp.com/images/49Diklfmn3HKvOx.png"
   coupon_code: "ABC12345"
-  expires: <%= Time.now + 8.days %>
-  redeemed_at: 2012-07-21T09:39:12Z
-  created_at: 2012-07-19T09:39:23Z
-  updated_at: 2012-07-19T09:39:34Z
+  expires: <%= now + 8.days %>
+  redeemed_at: <%= never %>
+  created_at: <%= now - 5.days %>
+  updated_at: <%= now - 5.days %>
 - uuid: "452c5d30-2eb7-11e2-81c1-0800200c9a66"
-  name: "Free Large Soda!"
-  contents: "Lorem ipsum dolor set amit"
+  name: "Free sandwich upgrade!"
+  contents: "Redeem this coupon to upgrade any 6\" sandwich to a footlong!"
   image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFNYTNb49Diklfmn3HKvOx.png"
   thumbnail_image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFN.png"
   is_read: true
   is_redeemed: false
   barcode_image_url: "https://dumb-receipt.herokuapp.com/images/49Diklfmn3HKvOx.png"
   coupon_code: "ABC12345"
-  expires: <%= Time.now + 1.day %>
-  redeemed_at: <%= Time.at 0 %>
-  created_at: 2012-07-19T09:39:23Z
-  updated_at: 2012-07-19T09:39:34Z
+  expires: <%= now + 1.5.day %>
+  redeemed_at: <%= never %>
+  created_at: <%= now - 2.weeks %>
+  updated_at: <%= now - 2.weeks %>
 - uuid: "466c5d30-2eb7-11e2-81c1-0800200c9a66"
-  name: "Half-priced Pie!"
-  contents: "Lorem ipsum dolor set amit"
+  name: "Half off a slice of pie!"
+  contents: "Try our world-famous pie for half off!"
   image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFNYTNb49Diklfmn3HKvOx.png"
   thumbnail_image_url: "https://dumb-receipt.herokuapp.com/images/wLioVypFN.png"
   is_read: true
   is_redeemed: true
   barcode_image_url: "https://dumb-receipt.herokuapp.com/images/49Diklfmn3HKvOx.png"
   coupon_code: "ABC12345"
-  expires: 2012-07-30T17:00:01Z
-  redeemed_at: 2012-07-21T09:39:12Z
-  created_at: 2012-07-19T09:39:23Z
-  updated_at: 2012-07-19T09:39:34Z
+  expires: <%= now + 2.weeks %>
+  redeemed_at: <%= never %>
+  created_at: <%= now - 1.5.days %>
+  updated_at: <%= now - 1.5.days %>
 - uuid: "452c5d30-2eb7-11e2-81c1-0800200c9a68"
   name: "Free Cookie!"
   contents: "Redeem this coupon any time for a free cookie!"
@@ -244,10 +247,10 @@ offers:
   is_redeemed: true
   barcode_image_url: "https://dumb-receipt.herokuapp.com/images/49Diklfmn3HKvOx.png"
   coupon_code: "ABC12345"
-  expires: <%= Time.now + 1.day %>
-  redeemed_at: <%= Time.at 0 %>
-  created_at: <%= Time.now - 3.days %>
-  updated_at: <%= Time.now - 3.days %>
+  expires: <%= now - 3.days %>
+  redeemed_at: <%= now - 5.days %>
+  created_at: <%= now - 8.days %>
+  updated_at: <%= now - 8.days %>
 - uuid: "452c5d30-2eb7-11e2-81c1-0800200c9a69"
   name: "Half-off Entree!"
   contents: "Redeem this coupon for half off any non-premium entree!"
@@ -257,10 +260,10 @@ offers:
   is_redeemed: true
   barcode_image_url: "https://dumb-receipt.herokuapp.com/images/49Diklfmn3HKvOx.png"
   coupon_code: "ABC12345"
-  expires: <%= Time.now - 1.day %>
-  redeemed_at: <%= Time.now - 2.days %>
-  created_at: <%= Time.now - 5.days %>
-  updated_at: <%= Time.now - 2.days %>
+  expires: <%= now - 1.day %>
+  redeemed_at: <%= now - 2.days %>
+  created_at: <%= now - 5.days %>
+  updated_at: <%= now - 2.days %>
 
 locations:
 - uuid: "184dc5a0-4880-11e2-bcfd-0800200c9a66"
@@ -339,11 +342,11 @@ users:
   sign_in_count: 5
   receipts_count: 6
   offers_count: 7
-  created_at: 2012-07-19T09:39:01Z
-  updated_at: 2012-07-19T09:39:12Z
-  confirmed_at: 2012-07-19T09:39:23Z
-  current_sign_in_at: 2012-07-19T09:39:34Z
-  last_sign_in_at: 2012-07-19T09:39:45Z
+  created_at: <%= now - 92.days %>
+  updated_at: <%= now - 32.days %>
+  confirmed_at: <%= now - 92.days + 3.minutes %>
+  current_sign_in_at: <%= now - 2.minutes %>
+  last_sign_in_at: <%= now - 1.day %>
   current_sign_in_ip: "10.1.0.5"
   last_sign_in_ip: "10.1.0.5"
 - uuid: "184dc5b4-4880-11e2-bcfd-0800200c9a67"
@@ -354,11 +357,11 @@ users:
   sign_in_count: 8
   receipts_count: 9
   offers_count: 7
-  created_at: 2012-07-19T09:39:01Z
-  updated_at: 2012-07-19T09:39:12Z
-  confirmed_at: 2012-07-19T09:39:23Z
-  current_sign_in_at: 2012-07-19T09:39:34Z
-  last_sign_in_at: 2012-07-19T09:39:45Z
+  created_at: <%= now - 1.week %>
+  updated_at: <%= now - 32.minutes %>
+  confirmed_at: <%= now - 1.week + 5.minutes %>
+  current_sign_in_at: <%= now - 37.minutes %>
+  last_sign_in_at: <%= now - 7.hours %>
   current_sign_in_ip: "10.1.0.2"
   last_sign_in_ip: "10.1.0.1"
 - uuid: "184dc5b4-4880-11e2-bcfd-0800200c9a68"
@@ -369,11 +372,11 @@ users:
   sign_in_count: 7
   receipts_count: 7
   offers_count: 11
-  created_at: 2012-07-19T09:39:01Z
-  updated_at: 2012-07-19T09:39:12Z
-  confirmed_at: 2012-07-19T09:39:23Z
-  current_sign_in_at: 2012-07-19T09:39:34Z
-  last_sign_in_at: 2012-07-19T09:39:45Z
+  created_at: <%= now - 3.days %>
+  updated_at: <%= now - 3.days %>
+  confirmed_at: <%= now - 3.days + 37.minutes %>
+  current_sign_in_at: <%= now - 3.seconds %>
+  last_sign_in_at: <%= never %>
   current_sign_in_ip: "10.1.3.2"
   last_sign_in_ip: "10.1.0.9"
 - uuid: "184dc5b4-4880-11e2-bcfd-0800200c9a70"
@@ -384,11 +387,11 @@ users:
   sign_in_count: 6
   receipts_count: 10
   offers_count: 16
-  created_at: 2012-07-19T09:39:01Z
-  updated_at: 2012-07-19T09:39:12Z
-  confirmed_at: 2012-07-19T09:39:23Z
-  current_sign_in_at: 2012-07-19T09:39:34Z
-  last_sign_in_at: 2012-07-19T09:39:45Z
+  created_at: <%= now - 42.days %>
+  updated_at: <%= now - 40.days %>
+  confirmed_at: <%= now - 41.days %>
+  current_sign_in_at: <%= now - 3.minutes %>
+  last_sign_in_at: <%= now - 3.days %>
   current_sign_in_ip: "10.1.20.2"
   last_sign_in_ip: "10.1.0.24"
 - uuid: "184dc5b4-4880-11e2-bcfd-0800200c9a71"
@@ -399,11 +402,11 @@ users:
   sign_in_count: 14
   receipts_count: 19
   offers_count: 8
-  created_at: 2012-07-19T09:39:01Z
-  updated_at: 2012-07-19T09:39:12Z
-  confirmed_at: 2012-07-19T09:39:23Z
-  current_sign_in_at: 2012-07-19T09:39:34Z
-  last_sign_in_at: 2012-07-19T09:39:45Z
+  created_at: <%= now - 8.days %>
+  updated_at: <%= now - 8.days %>
+  confirmed_at: <%= now - 8.days + 3.minutes %>
+  current_sign_in_at: <%= now - 12.seconds %>
+  last_sign_in_at: <%= now - 3.5.days %>
   current_sign_in_ip: "10.1.48.2"
   last_sign_in_ip: "10.1.0.42"
 
