Make all logo_urls real

--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -276,7 +276,7 @@ locations:
   zip: "93117"
   phone: "805-555-1234"
   country: "United States"
-  logo_url: "https://dumb-receipt.herokuapp.com/images/joes_coffee_shop.png"
+  logo_url: "https://dumb-receipt.herokuapp.com/images/joes-coffee-logo.jpg"
 - uuid: "184dc5a0-4880-11e2-bcfd-0800200c9a67"
   name: "Betty's Diner"
   brand: "Betty's Diner"
@@ -298,7 +298,7 @@ locations:
   zip: "93263"
   phone: "805-555-3456"
   country: "United States"
-  logo_url: "https://dumb-receipt.herokuapp.com/images/subway.png"
+  logo_url: "https://dumb-receipt.herokuapp.com/images/subway-logo.jpg"
 - uuid: "184dc5a0-4880-11e2-bcfd-0800200c9a69"
   name: "Store 1117"
   brand: "Subway"
@@ -309,7 +309,7 @@ locations:
   zip: "93117"
   phone: "805-555-4567"
   country: "United States"
-  logo_url: "https://dumb-receipt.herokuapp.com/images/subway.png"
+  logo_url: "https://dumb-receipt.herokuapp.com/images/subway-logo.jpg"
 - uuid: "184dc5a0-4880-11e2-bcfd-0800200c9a60"
   name: "Panda #0928"
   brand: "Panda Express"
@@ -320,7 +320,7 @@ locations:
   zip: "93263"
   phone: "661-555-7460"
   country: "United States"
-  logo_url: "https://dumb-receipt.herokuapp.com/images/panda_express.png"
+  logo_url: "https://dumb-receipt.herokuapp.com/images/Panda_Express.png"
 - uuid: "184dc5a0-4880-11e2-bcfd-0800200c9a61"
   name: "IP Chicken"
   brand: "IP Chicken"
@@ -331,7 +331,7 @@ locations:
   zip: "93007"
   phone: "805-555-7460"
   country: "United States"
-  logo_url: "https://dumb-receipt.herokuapp.com/images/ip_chicken.png"
+  logo_url: "https://dumb-receipt.herokuapp.com/images/ipchicken228.jpg"
 
 users:
 - uuid: "184dc5b4-4880-11e2-bcfd-0800200c9a66"
