--- a/views/application.sass
+++ b/views/application.sass
@@ -6,6 +6,9 @@ html
 body
   background: transparent
 
+h1
+  cursor: pointer
+
 h2
   border-bottom: 1px solid #ccc
 
@@ -15,11 +18,6 @@ code
 
 .sr_red
   color: $sr_red
-
-.copyright
-  color: #666
-  font-size: 0.9em
-  text-align: center
 
 #page
   max-width: 640px
