--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,7 +1,9 @@
 doctype html
 html
   head
-    title DumbReceipt - README
+    title
+      | DumbReceipt
+      = " - #{@title}" if @title
     meta name='viewport' content='width=device-width, initial-scale=1.0'
     script type='text/javascript' src==uri('application.js')
     link rel='stylesheet' type='text/css' href==uri('bootstrap/css/bootstrap.min.css')
