--- a/views/visualize.slim
+++ b/views/visualize.slim
@@ -1,2 +1,3 @@
 h1 DumbReceipt
+script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js'
 script type='text/javascript' src==uri('visualize.js')
