--- a/views/application.sass
+++ b/views/application.sass
@@ -35,3 +35,18 @@ code
   right: 0
   z-index: -1
   box-shadow: inset 0 0 200px rgba(0, 0, 0, 0.6)
+
+
+.visualize
+  #page
+    max-width: 93%
+
+  &.card
+    float: left
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2)
+    border: 1px solid #bbb
+    background: #f5f5f5
+    // width: 200px
+    margin: 10px
+    padding: 10px
+    border-radius: 5px
