--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,7 +9,7 @@ html
     link rel='stylesheet' type='text/css' href==uri('bootstrap/css/bootstrap.min.css')
     link rel='stylesheet' type='text/css' href==uri('bootstrap/css/bootstrap-responsive.min.css')
     link rel='stylesheet' type='text/css' href==uri('application.css')
-  body
+  body class=="#{@body_class}"
     #page.container-fluid
       .row-fluid
         .span12
