--- a/views/visualize.slim
+++ b/views/visualize.slim
@@ -1,19 +1,6 @@
 h1 DumbReceipt
 
-h2 sync data
-#sync_data
-
-h2 receipts data
-#receipts_data
-
-h2 offers data
-#offers_data
-
-h2 locations data
-#locations_data
-
-h2 user data
-#user_data
+#visualize
 
 script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js'
 script type='text/javascript' src==uri('visualize.js')
