--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -10,6 +10,7 @@
 
 receipts:
 - uuid: "442c5d34-2eb7-11e2-81c1-0800200c9a66"
+  fourwords: "bebe bidi dobo bimo"
   cashier: "Joe"
   check: "9823"
   order: "92"
@@ -37,6 +38,7 @@ receipts:
   - "466c5d30-2eb7-11e2-81c1-0800200c9a66"
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a66"
 - uuid: "440c5d34-2eb7-11e2-81c1-0800200c9a66"
+  fourwords: "mara bara rudu pipu"
   check: "9826"
   order: "96"
   currency: "USD"
@@ -59,6 +61,7 @@ receipts:
   - type: "items"
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a66"
 - uuid: "444c5d34-2eb7-11e2-81c1-0800200c9a66"
+  fourwords: "mana wana bobo wiwe"
   cashier: "Joe"
   transaction: "98730"
   currency: "USD"
@@ -82,6 +85,7 @@ receipts:
   - "439c5d31-2eb7-11e2-81c1-0800200c9a66"
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a67"
 - uuid: "447c5d34-2eb7-11e2-81c1-0800200c9a66"
+  fourwords: "momo dubu bobo wiwe"
   cashier: "Mary"
   order: "92"
   currency: "USD"
@@ -106,6 +110,7 @@ receipts:
   - "439c5d32-2eb7-11e2-81c1-0800200c9a66"
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a68"
 - uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a66"
+  fourwords: "nana mara pipu dibo"
   check: "9832"
   order: "99"
   currency: "USD"
@@ -132,6 +137,7 @@ receipts:
   - "452c5d30-2eb7-11e2-81c1-0800200c9a66"
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a69"
 - uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a67"
+  fourwords: "fada waba ribi bidi"
   order: "32"
   currency: "USD"
   claimed_at: <%= now - 8.days %>
@@ -153,6 +159,7 @@ receipts:
   - "452c5d30-2eb7-11e2-81c1-0800200c9a69"
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a60"
 - uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a68"
+  fourwords: "nara pobu fidu raba"
   order: "42"
   currency: "USD"
   claimed_at: <%= now - 3.5.days %>
