--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -51,7 +51,7 @@ receipts:
   - subtotal: 5.01
   - tax: 0.39
   - total: 5.40
-  - Mastercard: 'XXXX-XXXX-XXXX-2384'
+  - Mastercard: 'XXXXXXXXXXXX2384'
   items:
   - name: "SM coffee"
     price: 0.79
@@ -63,7 +63,7 @@ receipts:
   - type: "items"
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a66"
 - uuid: "444c5d34-2eb7-11e2-81c1-0800200c9a66"
-  metadata: 
+  metadata:
   - receipt_id: "mana wana bobo wiwe"
   cashier: "Joe"
   transaction: "98730"
@@ -100,7 +100,7 @@ receipts:
   - subtotal: 4.38
   - tax: 0.34
   - total: 4.72
-  - VISA: 'XXXX-XXXX-XXXX-9823'
+  - VISA: 'XXXXXXXXXXXX9823'
   items:
   - name: "6\" Turkey w/ Avocado"
     price: 3.49
