Rename receipt_id -> serial_id and sketch some specs

--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -11,7 +11,7 @@
 receipts:
 - uuid: "442c5d34-2eb7-11e2-81c1-0800200c9a66"
   metadata:
-  - receipt_id: "bebe bidi dobo bimo"
+  - serial_id: "bebe bidi dobo bimo"
   cashier: "Joe"
   check: "9823"
   order: "92"
@@ -40,7 +40,7 @@ receipts:
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a66"
 - uuid: "440c5d34-2eb7-11e2-81c1-0800200c9a66"
   metadata:
-  - receipt_id: "mara bara rudu pipu"
+  - serial_id: "mara bara rudu pipu"
   check: "9826"
   order: "96"
   currency: "USD"
@@ -64,7 +64,7 @@ receipts:
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a66"
 - uuid: "444c5d34-2eb7-11e2-81c1-0800200c9a66"
   metadata:
-  - receipt_id: "mana wana bobo wiwe"
+  - serial_id: "mana wana bobo wiwe"
   cashier: "Joe"
   transaction: "98730"
   currency: "USD"
@@ -89,7 +89,7 @@ receipts:
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a67"
 - uuid: "447c5d34-2eb7-11e2-81c1-0800200c9a66"
   metadata:
-  - receipt_id: "momo dubu bobo wiwe"
+  - serial_id: "momo dubu bobo wiwe"
   cashier: "Mary"
   order: "92"
   currency: "USD"
@@ -115,7 +115,7 @@ receipts:
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a68"
 - uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a66"
   metadata:
-  - receipt_id: "nana mara pipu dibo"
+  - serial_id: "nana mara pipu dibo"
   check: "9832"
   order: "99"
   currency: "USD"
@@ -143,7 +143,7 @@ receipts:
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a69"
 - uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a67"
   metadata:
-  - receipt_id: "fada waba ribi bidi"
+  - serial_id: "fada waba ribi bidi"
   order: "32"
   currency: "USD"
   claimed_at: <%= now - 8.days %>
@@ -166,7 +166,7 @@ receipts:
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a60"
 - uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a68"
   metadata:
-  - receipt_id: "nara pobu fidu raba"
+  - serial_id: "nara pobu fidu raba"
   order: "42"
   currency: "USD"
   claimed_at: <%= now - 3.5.days %>
