--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -206,9 +206,56 @@ receipts:
   - "452c5d30-2eb7-11e2-81c1-0800200c9a68"
   - "452c5d30-2eb7-11e2-81c1-0800200c9a69"
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a60"
+- uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a70"
+  metadata:
+  - serial_id: "waba ribi bidi bobo"
+  order: "67"
+  currency: "USD"
+  claimed_at: <%= now - 4.days %>
+  completed_at: <%= now - 4.days %>
+  item_count: 2
+  totals:
+  - subtotal: 5.68
+  - tax: 0.44
+  - total: 6.12
+  items:
+  - name: "Paw Plate"
+    price: 4.69
+    quantity: 1
+  - name: "Small Drink"
+    price: 0.99
+    quantity: 1
+  zones:
+  - type: "totals"
+  location: "184dc5a0-4880-11e2-bcfd-0800200c9a60"
+- uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a72"
+  metadata:
+  - serial_id: "ribi bidi bobo robo"
+  order: "02"
+  currency: "USD"
+  claimed_at: <%= now - 2.3.days %>
+  completed_at: <%= now - 2.3.days %>
+  item_count: 3
+  totals:
+  - subtotal: 6.35
+  - tax: 0.49
+  - total: 6.84
+  items:
+  - name: "Paw Plate"
+    price: 4.69
+    quantity: 1
+  - name: "Small Drink"
+    price: 0.99
+    quantity: 1
+  - name: "Cookie"
+    price: 0.67
+    quantity: 1
+  zones:
+  - type: "totals"
+  location: "184dc5a0-4880-11e2-bcfd-0800200c9a60"
 - uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a68"
   metadata:
-  - serial_id: "nara pobu fidu raba"
+  - serial_id: "pobu fidu raba mara"
   order: "42"
   currency: "USD"
   claimed_at: <%= now - 3.5.days %>
@@ -231,6 +278,28 @@ receipts:
   zones:
   - type: "totals"
   location: "184dc5a0-4880-11e2-bcfd-0800200c9a61"
+- uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a69"
+  metadata:
+  - serial_id: "nara pobu fidu raba"
+  order: "42"
+  currency: "USD"
+  claimed_at: <%= now - 1.days %>
+  completed_at: <%= now - 1.days %>
+  item_count: 4
+  totals:
+  - subtotal: 11.16
+  - tax: 0.86
+  - total: 12.02
+  items:
+  - name: "6\" Tuna"
+    price: 4.49
+    quantity: 2
+  - name: "MD Drink"
+    price: 1.09
+    quantity: 2
+  zones:
+  - type: "totals"
+  location: "184dc5a0-4880-11e2-bcfd-0800200c9a68"
 
 offers:
 - uuid: "452c5d30-2eb7-11e2-81c1-0800200c9a68"
