--- a/views/application.sass
+++ b/views/application.sass
@@ -1,7 +1,7 @@
 $sr_red: #a61623
 
 html
-  background: $sr_red
+  background: darken($sr_red, 10%)
 
 body
   background: transparent
@@ -26,16 +26,6 @@ code
   border-radius: 7px
   background: white
   box-shadow: 0 0 20px black
-
-#shadow
-  position: fixed
-  height: 100%
-  width: 100%
-  bottom: 0
-  right: 0
-  z-index: -1
-  box-shadow: inset 0 0 200px rgba(0, 0, 0, 0.6)
-
 
 .visualize
   #page
