Add silhouette and barcode images

--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -349,6 +349,7 @@ offers:
   thumbnail_image_url: "<%= @root_url %>images/double_meat.png"
   is_read: true
   is_redeemed: false
+  barcode_image_url: "<%= @root_url %>images/abc12345.png"
   coupon_code: "ABC12345"
   expires: <%= now + 1.5.day %>
   redeemed_at: <%= never %>
@@ -478,7 +479,7 @@ users:
   first_name: "Jane"
   last_name: "Doe"
   email: "jane.doe@example.com"
-  profile_image_url: "<%= @root_url %>images/wLioVypFNYTNb53Diklfmn3HKvOx.png"
+  profile_image_url: "<%= @root_url %>images/jane_doe_silhouette.png"
   sign_in_count: 5
   receipts_count: 6
   offers_count: 7
