Give redeemed offers sensible timestamps

--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -389,7 +389,7 @@ offers:
   barcode_image_url: "<%= @root_url %>images/49Diklfmn3HKvOx.png"
   coupon_code: "ABC12345"
   expires: <%= now + 8.days %>
-  redeemed_at: <%= never %>
+  redeemed_at: <%= now - 2.3.days %>
   created_at: <%= now - 5.days %>
   updated_at: <%= now - 5.days %>
 - uuid: "466c5d30-2eb7-11e2-81c1-0800200c9a66"
@@ -402,7 +402,7 @@ offers:
   barcode_image_url: "<%= @root_url %>images/49Diklfmn3HKvOx.png"
   coupon_code: "ABC12345"
   expires: <%= now + 2.weeks %>
-  redeemed_at: <%= never %>
+  redeemed_at: <%= now - 2.hours %>
   created_at: <%= now - 1.5.days %>
   updated_at: <%= now - 1.5.days %>
 
