--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -1,6 +1,6 @@
 ---
 
-<% require 'active_support/core_ext/numeric/time' %>
+<% require 'active_support/core_ext' %>
 <% now, never = Time.now, Time.at(0) %>
 
 #
