Change a bunch of item values

--- a/views/data.yml.erb
+++ b/views/data.yml.erb
@@ -23,13 +23,13 @@ receipts:
   completed_at: <%= now - 2.weeks %>
   item_count: 2
   totals:
-  - subtotal: 2.38
-  - tax: 0.18
-  - total: 2.56
+  - subtotal: 2.89
+  - tax: 0.22
+  - total: 3.11
   - VISA: 'XXXX-XXXX-XXXX-1234'
   items:
-  - name: "MD Coffee"
-    price: 0.99
+  - name: "LG Coffee"
+    price: 1.50
     quantity: 1
   - name: "Doughnut"
     price: 1.39
@@ -54,13 +54,13 @@ receipts:
   completed_at: <%= now - 1.week %>
   item_count: 3
   totals:
-  - subtotal: 5.01
-  - tax: 0.39
-  - total: 5.40
+  - subtotal: 9.01
+  - tax: 0.70
+  - total: 9.71
   - Mastercard: 'XXXXXXXXXXXX2384'
   items:
-  - name: "SM coffee"
-    price: 0.79
+  - name: "SM Latte"
+    price: 2.79
     quantity: 2
   - name: "Ham & Cheese Croissant"
     price: 3.43
@@ -78,18 +78,18 @@ receipts:
   currency: "USD"
   claimed_at: <%= now - 6.hours %>
   completed_at: <%= now - 6.hours %>
-  item_count: 2
+  item_count: 3
   totals:
-  - subtotal: 9.08
-  - tax: 0.70
-  - total: 9.78
+  - subtotal: 10.17
+  - tax: 0.79
+  - total: 10.96
   items:
   - name: "Breakfast Special"
     price: 7.99
     quantity: 1
-  - name: "Coffee"
+  - name: "Diner Drip"
     price: 1.09
-    quantity: 1
+    quantity: 2
   zones:
   - type: "totals"
   offers:
@@ -197,7 +197,7 @@ receipts:
   - total: 3.11
   - Mastercard: 'XXXX-XXXX-XXXX-9823'
   items:
-  - name: "Vegetable Bowl"
+  - name: "Steamed Vegetable Bowl"
     price: 2.89
     quantity: 1
   zones:
@@ -219,7 +219,7 @@ receipts:
   - tax: 0.44
   - total: 6.12
   items:
-  - name: "Paw Plate"
+  - name: "3-item Combo"
     price: 4.69
     quantity: 1
   - name: "Small Drink"
@@ -237,12 +237,12 @@ receipts:
   completed_at: <%= now - 2.3.days %>
   item_count: 3
   totals:
-  - subtotal: 6.35
-  - tax: 0.49
-  - total: 6.84
+  - subtotal: 5.35
+  - tax: 0.41
+  - total: 5.76
   items:
-  - name: "Paw Plate"
-    price: 4.69
+  - name: "2-item Combo"
+    price: 3.69
     quantity: 1
   - name: "Small Drink"
     price: 0.99
@@ -269,7 +269,7 @@ receipts:
   - name: "Chicken Strips"
     price: 4.39
     quantity: 2
-  - name: "Gravy Side"
+  - name: "Gravy Dip"
     price: 0.79
     quantity: 2
   - name: "LG Drink"
@@ -287,12 +287,12 @@ receipts:
   completed_at: <%= now - 1.days %>
   item_count: 4
   totals:
-  - subtotal: 11.16
-  - tax: 0.86
-  - total: 12.02
+  - subtotal: 12.18
+  - tax: 0.94
+  - total: 13.12
   items:
-  - name: "6\" Tuna"
-    price: 4.49
+  - name: "6\" Buffalo Chicken"
+    price: 5.00
     quantity: 2
   - name: "MD Drink"
     price: 1.09
